--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ body::after {
 }
 
 h1 {
-  font-size: 2rem;
-  margin-bottom: 7px;
+  font-size: 1.5rem;
+  margin-bottom: 4px;
   text-align: center;
   text-shadow: 10px 10px 19px rgba(239, 234, 238, 0.9);
 }
@@ -74,7 +74,7 @@ select {
 }
 
 button {
-  padding: 10px 14px;
+  padding: 12px 14px;
   border-radius: 10px;
   border: none;
   cursor: pointer;
@@ -126,7 +126,7 @@ button:hover { transform: scale(1.1); }
 }
 #container:hover  {
   transform: scale(1.010);
-  transition: transform .2s ease;
+  transition: transform 0.5s ease;
   cursor: pointer;
 
 }
@@ -152,8 +152,9 @@ canvas {
 }
 canvas:hover {
   border-color: #e012d6;
-  box-shadow: 0 0 90px #f0e7ef;
+  box-shadow: 0 0 60px #f0e7ef;
   cursor: pointer;
+  transition: 1000ms;
 }
 
 #resultadoOverlay {
@@ -161,7 +162,7 @@ canvas:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%) scale(0.8);
-  background: rgba(0,0,0,0.65);
+  background: rgba(0,0,0,0.90);
   padding: 16px 28px;
   border-radius: 18px;
   font-size: 2rem;
