--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   background:#111;
   overflow-x: hidden;
   position: relative;
+  
 }
 
 body::before {
@@ -16,8 +17,9 @@ body::before {
   inset: 0;
   background: url('leoeisa.png')
     center/cover no-repeat;
-  filter: blur(3px) brightness(0.6);
+  filter: blur(2px) brightness(0.6);
   z-index: -2;
+  transition: all 0.7s;
 }
 
 body::after {
@@ -44,10 +46,14 @@ body::after {
   align-items: center;
   max-width: 380px;
   width: 100%;
+  margin-right: 4rem;
 }
 
 h1 {
-  font-size: 1.5rem;
+  background-color: #c9c2c24d;
+  padding: 1px;
+  border-radius: 20px;
+  font-size: 1.2rem;
   margin-bottom: 4px;
   text-align: center;
   text-shadow: 10px 10px 19px rgba(239, 234, 238, 0.9);
@@ -60,7 +66,7 @@ h1 {
   gap: 8px;
   justify-content: center;
   margin-bottom: 15px;
-  margin: 10px;
+  margin: 8px;
 }
 
 input[type="text"],
@@ -70,11 +76,12 @@ select {
   border-radius: 8px;
   border: none;
   outline: none;
-  font-size: 15px;
+  font-size: 12px;
+  border-radius: 15px;
 }
 
 button {
-  padding: 12px 14px;
+  padding: 11px 13px;
   border-radius: 10px;
   border: none;
   cursor: pointer;
@@ -83,6 +90,7 @@ button {
   font-weight: 700;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
   transition: transform .12s ease;
+  border-radius: 15px;
 }
 
 button:hover { transform: scale(1.1); }
@@ -185,7 +193,6 @@ canvas:hover {
 
 .musica { background-color: orange; }
 
-/* HISTÓRICO DE VENCEDORES */
 #ultimosVencedores {
   margin-top: 20px;
   background: rgba(255,255,255,0.08);
@@ -211,7 +218,7 @@ canvas:hover {
   font-weight: 600;
 }
 
-/* TEMA CLARO */
+
 body.tema-claro {
   background: #FF4DA6;
   color: #FF4DA6;
@@ -241,6 +248,56 @@ body.tema-claro #resultadoOverlay {
   color: #000;
 }
 
+
+#btnMostrarPainel {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 9999;
+  padding: 10px 14px;
+  border-radius: 14px;
+  font-size: 12px;
+  background: linear-gradient(45deg, #e012d6, #ff4da6);
+  color: #fff;
+  cursor: pointer;
+}
+
+#btnOcultarPainel {
+  background: linear-gradient(45deg, #e012d6, #ff4da6);
+  color: #fff;
+}
+
+body.painel-oculto .painel {
+  transition: all 0.5s ease-in-out;
+  display: none;
+  
+}
+
+body.painel-oculto .layout {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  
+
+}
+body.painel-oculto::before {
+  background-image: url("centro.png");
+  background-size: contain;
+  background-repeat: repeat;
+  filter: blur(6px);
+  transition: all 0.7s;
+}
+
+
+body.painel-oculto #container {
+  margin: 0;   
+  z-index: 2;
+ 
+  
+}
 
 
 
