--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   --accent: #61dafb;
 }
 
+* {
+  user-select: none;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -18,7 +22,7 @@ body::before {
   position: fixed;
   inset: 0;
   background: url('leoeisa.png') center/cover no-repeat;
-  filter: blur(2px) brightness(0.6);
+  filter: blur(4px) brightness(0.6);
   z-index: -2;
   transition: all 0.7s;
 }
@@ -31,6 +35,14 @@ body::after {
   z-index: -1;
 }
 
+.titulo {
+  text-align: center;
+  font-weight: 800;
+  color: #fff;
+  text-shadow: 0 3px 8px rgba(0, 0, 0, 0.9);
+  user-select: none;
+}
+
 .layout {
   display: flex;
   flex-wrap: wrap;
@@ -38,6 +50,9 @@ body::after {
   align-items: flex-start;
   gap: 40px;
   padding: 40px 20px;
+  overflow-x: auto;
+
+
 
 }
 
@@ -262,7 +277,6 @@ body.tema-claro {
   background: #FF4DA6;
   color: #FF4DA6;
 
-
 }
 
 body.tema-claro .tagNome {
@@ -287,7 +301,6 @@ body.tema-claro #resultadoOverlay {
   color: #000;
 }
 
-
 #btnMostrarPainel {
   position: fixed;
   top: 20px;
@@ -307,8 +320,8 @@ body.tema-claro #resultadoOverlay {
 }
 
 body.painel-oculto .painel {
-  transition: all 0.5s ease-in-out;
   display: none;
+
 
 }
 
@@ -319,9 +332,6 @@ body.painel-oculto .layout {
   align-items: center;
   justify-content: center;
   margin-top: 30px;
-
-
-
 }
 
 body.painel-oculto::before {
@@ -329,16 +339,15 @@ body.painel-oculto::before {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  filter: blur(1px);
-  transition: all 0.5s;
-
+  filter: blur(2px);
+  transition: all 1.2s ease-in-out;
 }
+
 
 
 body.painel-oculto #container {
   margin: 0;
   z-index: 2;
-
 }
 
 .resultover {
@@ -350,6 +359,4 @@ body.painel-oculto #container {
   display: flex;
   flex-direction: column;
   width: max-content;
-
-
 }
